feat: Enhance assessment question generation with bank-based selection and validation logic